@@ -37,34 +37,34 @@ public class CollectionMethodsTest {
   }
 
   @Test
-  public void listify00() {
-    assertEquals(Collections.singletonList(null), listify(null));
-    assertEquals(List.of("Hello World"), listify("Hello World"));
+  public void asList00() {
+    assertEquals(Collections.singletonList(null), asList(null));
+    assertEquals(List.of("Hello World"), asList("Hello World"));
     assertEquals(List.of("Hello", "World"),
-          listify(new String[]{"Hello", "World"}));
+          asList(new String[]{"Hello", "World"}));
     Object obj = new Object();
-    assertEquals(Collections.singletonList(obj), listify(obj));
-    assertEquals(List.of(1, 2, 3, 4, 5), listify(new int[]{1, 2, 3, 4, 5}));
-    assertEquals(List.of(1D, 2D, 3D, 4D, 5D), listify(new double[]{1, 2, 3, 4, 5}));
-    assertEquals(List.of(1L, 2L, 3L, 4L, 5L), listify(new long[]{1, 2, 3, 4, 5}));
-    assertEquals(List.of(1F, 2F, 3F, 4F, 5F), listify(new float[]{1, 2, 3, 4, 5}));
+    assertEquals(Collections.singletonList(obj), asList(obj));
+    assertEquals(List.of(1, 2, 3, 4, 5), asList(new int[]{1, 2, 3, 4, 5}));
+    assertEquals(List.of(1D, 2D, 3D, 4D, 5D), asList(new double[]{1, 2, 3, 4, 5}));
+    assertEquals(List.of(1L, 2L, 3L, 4L, 5L), asList(new long[]{1, 2, 3, 4, 5}));
+    assertEquals(List.of(1F, 2F, 3F, 4F, 5F), asList(new float[]{1, 2, 3, 4, 5}));
     assertEquals(List.of((short) 1, (short) 2, (short) 3),
-          listify(new short[]{1, 2, 3}));
+          asList(new short[]{1, 2, 3}));
     assertEquals(List.of((byte) 1, (byte) 2, (byte) 3),
-          listify(new byte[]{1, 2, 3}));
+          asList(new byte[]{1, 2, 3}));
     assertEquals(List.of((char) 1, (char) 2, (char) 3),
-          listify(new char[]{1, 2, 3}));
+          asList(new char[]{1, 2, 3}));
     Set<Integer> s = new LinkedHashSet<>();
     s.add(1);
     s.add(2);
     s.add(3);
-    assertEquals(List.of(1, 2, 3), listify(s));
+    assertEquals(List.of(1, 2, 3), asList(s));
     assertEquals(
           List.of(Boolean.TRUE, Boolean.FALSE, Boolean.TRUE),
-          listify(new boolean[]{true, false, true}));
+          asList(new boolean[]{true, false, true}));
     List l = new ArrayList();
     l.add(10);
-    assertSame(l, listify(l));
+    assertSame(l, asList(l));
   }
 
   @Test
@@ -193,31 +193,31 @@ public class CollectionMethodsTest {
   }
 
   @Test
-  public void initializeList00() {
-    List<String> l = initializeList(5, "FOO");
+  public void initializedList00() {
+    List<String> l = initializedList(5, "FOO");
     assertEquals(List.of("FOO", "FOO", "FOO", "FOO", "FOO"), l);
   }
 
   @Test
-  public void initializeList01() {
-    List<String> l = initializeList(0, "FOO");
+  public void initializedList01() {
+    List<String> l = initializedList(0, "FOO");
     assertEquals(List.of(), l);
   }
 
   @Test(expected = NullPointerException.class)
-  public void initializeList02() {
-    initializeList(5, null);
+  public void initializedList02() {
+    initializedList(5, null);
   }
 
   @Test(expected = IllegalArgumentException.class)
-  public void initializeList03() {
-    initializeList(-1, "FOO");
+  public void initializedList03() {
+    initializedList(-1, "FOO");
   }
 
   @Test
-  public void initializeList04() {
+  public void initializedList04() {
     MutableInt provider = new MutableInt(10);
-    List<Integer> l = initializeList(5, provider::getAndIncrement);
+    List<Integer> l = initializedList(5, provider::increment);
     assertEquals(List.of(10, 11, 12, 13, 14), l);
   }
 
@@ -271,8 +271,8 @@ public class CollectionMethodsTest {
           null);
   }
 
-  public void initializeMap03() {
-    Map<?, ?> map = CollectionMethods.initializeMap("foo", 2, "bar", 3);
+  public void initializedMap03() {
+    Map<?, ?> map = CollectionMethods.initializedMap("foo", 2, "bar", 3);
     assertEquals(2, map.size());
     assertEquals(2, (int) map.get("foo"));
     assertEquals(3, (int) map.get("bar"));
